// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App is <AddToDO> visible? 1`] = `
<View>
  <Text>
    AddToDo
  </Text>
</View>
`;

exports[`App is <ToDoList> visible? 1`] = `
<View>
  <Text>
    ToDoList
  </Text>
</View>
`;
